plugins {
    id 'java'
    id 'jacoco'
}

group 'code.shubham'
version '0.0.1'
sourceCompatibility = '21'
targetCompatibility = '21'

jacoco { //Please do not change this
    toolVersion = "0.8.4"
//    reportsDir = file("$buildDir/jacoco")
}

//jacocoTestReport { //Please do not change this
//    reports {
//        xml.enabled true
//        csv.enabled false
//        html.enabled false
//        xml.destination file("./jacoco.xml")
//    }
//}

jar {
//    archiveBaseName = 'object_oriented_design' //Please do not change this final artifact name
//    manifest {
//        attributes 'Main-Class' : '' //Change this to the main class of your program which will be executed
//    }
    // To create a single jar with all dependencies.
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }
}

test { ///Please do not change this
    useJUnitPlatform()
    testLogging {
        events "PASSED", "SKIPPED", "FAILED", "STANDARD_ERROR"
    }
    finalizedBy jacocoTestReport // report is always generated after tests run
    afterSuite { desc, result ->
        if (!desc.parent)
            println("${result.resultType} " +
                    "(${result.testCount} tests, " +
                    "${result.successfulTestCount} successes, " +
                    "${result.failedTestCount} failures, " +
                    "${result.skippedTestCount} skipped)")
    }
}


repositories {
    mavenCentral()
}

//Add your dependencies here
dependencies {
    implementation(
            'com.google.guava:guava:33.3.1-jre'
    )
    compileOnly (
            'org.projectlombok:lombok:1.18.30'
    )
    annotationProcessor (
            'org.projectlombok:lombok:1.18.30'
    )
    testCompileOnly (
            'org.projectlombok:lombok:1.18.30'
    )
    testAnnotationProcessor (
            'org.projectlombok:lombok:1.18.30'
    )
    testImplementation(
            'junit:junit:4.13.1',
            'org.junit.jupiter:junit-jupiter-api:5.9.0',
            'org.junit.jupiter:junit-jupiter-engine:5.9.0',
            'org.junit.vintage:junit-vintage-engine:5.9.0',
            'org.junit.platform:junit-platform-runner:1.9.0',
            'org.mockito:mockito-core:4.8.0',
            'org.mockito:mockito-junit-jupiter:4.8.0'
    )
}